--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
                 <div class="box__ticket__time">10.03.12 18:00</div>
                 <div class="box__ticket__editor"><!-- &#x270E --></div>
                 <div class="box__ticket__delete"><!-- X --></div>
+                <div class="box__ticket__description visually-hidden"> Описание</div>
             </div>       
 
         </div>
