Реализовано удаление тикитов и исправлена ошибка добавления новых

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
         <div class="boxF">
 
             <div class="box__ticket">
+                <div class="box__ticket__id"></div>
                 <label class="checker">
                     <input type="checkbox" class="box__ticket__checkbox">
                     <div class="box__ticket__checker"></div>
