--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
         <div class="boxF">
 
-            <div class="box__ticket">
+<!--             <div class="box__ticket">
                 <div class="box__ticket__id"></div>
                 <label class="checker">
                     <input type="checkbox" class="box__ticket__checkbox">
@@ -21,10 +21,10 @@
                     Образец карточки
                 </div>
                 <div class="box__ticket__time">10.03.12 18:00</div>
-                <div class="box__ticket__editor"><!-- &#x270E --></div>
-                <div class="box__ticket__delete"><!-- X --></div>
+                <div class="box__ticket__editor"> &#x270E </div>
+                <div class="box__ticket__delete"> X </div>
                 <div class="box__ticket__description visually-hidden"> Описание</div>
-            </div>       
+            </div>   -->     
 
         </div>
 
